--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
-    "sqlite3": "^5.0.0"
+    "mysql": "^2.18.1",
+    "sqlite3": "^5.0.0",
+    "url-parse": "^1.4.7"
   },
   "devDependencies": {},
   "autoload": {
